k8s/cd/service/loki-routes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway
      name: gateway
  hostnames:
    - loki.c20.k8s.nevi.network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: loki
          port: 3100
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
